--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "web-vitals": "^2.1.4",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "pg": "^8.12.0"
   },
   "optionalDependencies": {
     "mongoose": "^8.7.2",
@@ -28,6 +29,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node server/index.js",
+    "server:pg": "node server/index.pg.js",
+    "host": "node server/hosting.js",
     "dev": "concurrently \"npm run server\" \"npm start\""
   },
   "proxy": "http://localhost:4000",
