--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "pg": "^8.16.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
     "uuid": "^9.0.1",
-    "pg": "^8.12.0"
+    "web-vitals": "^2.1.4"
   },
   "optionalDependencies": {
-    "mongoose": "^8.7.2",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "mongoose": "^8.7.2"
   },
   "devDependencies": {
     "concurrently": "^9.0.1"
@@ -31,7 +31,8 @@
     "server": "node server/index.js",
     "server:pg": "node server/index.pg.js",
     "host": "node server/hosting.js",
-    "dev": "concurrently \"npm run server\" \"npm start\""
+    "dev": "concurrently \"npm run server\" \"npm start\"",
+    "vercel-build": "npm run build"
   },
   "proxy": "http://localhost:4000",
   "eslintConfig": {
